--- a/calculadora.html
+++ b/calculadora.html
@@ -160,6 +160,18 @@
             margin-bottom: 20px;
             border-left: 4px solid #2196f3;
         }
+
+        .back-link {
+            display: inline-block;
+            margin-bottom: 20px;
+            color: #667eea;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -170,6 +182,8 @@
         </div>
         
         <div class="content">
+            <a href="/" class="back-link">← Voltar ao início</a>
+            
             <div class="info">
                 <strong>💡 Como usar:</strong> Digite o custo do produto, escolha a categoria e defina sua margem de lucro. A calculadora mostrará o preço final para cada marketplace.
             </div>
